# transgui

./: .gitignore  LICENSE  README.md  stack.yaml  transgui.cabal
app/: Main.hs
src/: Column.hs  Field.hs  Main.hs  RPC.hs  Response.hs  Some.hs  Store.hs  Torrent.hs  Trans.hs  UI.hs
test/: Spec.hs  TestColumn.hs  TestDaemon.hs  TestField.hs  TestTimeFormat.hs
ui/: main.glade
