cabal-version:       2.2
name:                transgui
version:             0.1.0.0
synopsis:            Transmission Remote GUI
-- description:
homepage:            https://github.com/zaquest/transgui#readme
license:             MIT
license-file:        LICENSE
author:              zaquest
maintainer:          web.elektro.net@gmail.com
copyright:           2018 zaquest
category:            Torrent
build-type:          Simple
extra-source-files:  README.md

executable transgui
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       RPC UI Trans
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       text,
                       transformers,
                       vector,
                       aeson,
                       http-types,
                       http-client,
                       haskell-gi-base,
                       gi-gtk,
                       gi-gtk-hs,
                       gi-gio
