cabal-version:       2.2
name:                transgui
version:             0.1.0.0
synopsis:            Transmission Remote GUI
-- description:
homepage:            https://github.com/zaquest/transgui#readme
license:             MIT
license-file:        LICENSE
author:              zaquest
maintainer:          web.elektro.net@gmail.com
copyright:           2018 zaquest
category:            Torrent
build-type:          Simple
extra-source-files:  README.md

library
  exposed-modules: Trans Field Some Column RPC Response Store
  other-modules: Torrent UI
  hs-source-dirs:
      src
  build-depends:       base >=4.11 && <5,
                       bytestring,
                       text >=1.2 && <3,
                       transformers >=0.3.0.0 && <0.7,
                       vector,
                       aeson,
                       http-types,
                       http-client,
                       haskell-gi-base >=0.25.0 && <0.27,
                       gi-gtk >=3.0.26 && <3.1,
                       gi-gtk-hs >= 0.3.16 && < 0.4,
                       gi-gio >= 2.0 && <2.1,
                       gi-glib >=2.0.6 && <2.1,
                       gi-gobject >=2.0 && <2.1,
                       data-default,
                       some,
                       microlens,
                       microlens-th,
                       unordered-containers,
                       time
  default-language: Haskell2010


executable transgui-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.11 && < 5,
                       transgui

test-suite transgui-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules: TestField TestColumn TestDaemon TestTimeFormat
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >=4.11 && <5,
                 HUnit,
                 shelly,
                 async,
                 text,
                 bytestring,
                 raw-strings-qq,
                 system-filepath,
                 hinotify,
                 time,
                 transgui
  default-language: Haskell2010
